# rendy

./: .gitignore  CMakeLists.txt  configure_android.bat
assets/: fbx_animation_test.fbx  glb_animation_test.glb  iem.dds  iem_ldr.dds  lut.dds
dep/: CMakeLists.txt
dep/assimp/: CMakeLists.txt
dep/assimp/code/: CMakeLists.txt
dep/gli/: CMakeLists.txt
dep/glm/: CMakeLists.txt
dep/glm/glm/: CMakeLists.txt
dep/optick/gui/Controls/: Settings.cs
dep/stb/: CMakeLists.txt
engine/: common.h  engine.cpp  engine.h  gapi.cpp  gapi.h  index_type.h  main.cpp  rendy.h
engine/buffer/: abstract_buffer.cpp  abstract_buffer.h  buffer_es2.cpp  buffer_es2.h  buffer_es3.cpp  buffer_layout.h
engine/command/: abstract_command.h  bind_texture2d.cpp  bind_texture_cube.cpp  bind_texture_cube.h  bind_vertex_array.cpp  bind_vertex_array.h  draw.cpp  draw.h  set_uniform.h
engine/drawable/: abstract_drawable.h  batch.cpp  batch.h  model.cpp  model.h
engine/image/: image2d.h
engine/material/: abstract_material.cpp  abstract_material.h  default_material_es3.cpp  default_shader_sources_es2.hpp  material_factory.h
engine/pipeline/render_pass/: depth_prepass.cpp  depth_prepass.h  opaque_pass.cpp  opaque_pass.h  transparent_pass.cpp
engine/shader/: abstract_shader.cpp  abstract_shader_variant.h  default_shader_executor_es3.hpp  shader_data_type.cpp  shader_es2.cpp  shader_es3.cpp  shader_es3.h  shader_flags.cpp  shader_flags.h  shader_type.h  shader_variant_es2.cpp  shader_variant_es2.h  shader_variant_es3.cpp
engine/texture/: texture_format.cpp  texture_type.h
engine/texture/sampler2d/: abstract_sampler2d.h  sampler2d_es2.h  sampler2d_factory.h
engine/texture/texture2d/: abstract_texture2d.h  texture2d_es2.cpp  texture2d_es3.h  texture2d_factory.cpp
engine/texture/texture_cube/: texture_cube_es3.cpp  texture_cube_es3.h  texture_cube_factory.cpp  texture_cube_factory.h
engine/util/: thread_pool.h
engine/util/vfs/: abstract_fs.h  native_fs.cpp
engine/vertex_array/: vertex_array_es3.cpp  vertex_array_factory.h
pipeline/: pipeline_es2.h
sandbox/: main.cpp
src/: abstract_buffer.cpp  abstract_buffer.h  abstract_camera.h  abstract_command.h  abstract_command_call.h  abstract_drawable.h  abstract_engine.cpp  abstract_engine.h  abstract_file.h  abstract_fs.h  abstract_gapi.h  abstract_material.h  abstract_render_pass.cpp  abstract_render_pass.h  abstract_render_stage.cpp  abstract_render_stage.h  abstract_resource.h  abstract_sampler.h  abstract_sampler2d.h  abstract_shader.h  abstract_shader_variant.h  abstract_texture.h  abstract_texture2d.h  abstract_texture_cube.h  abstract_vertex_array.h  abstract_vfs.h  animator.cpp  animator.h  batch.cpp  batch.h  bind_buffer.cpp  bind_buffer.h  bind_shader.cpp  bind_shader.h  bind_texture2d.cpp  bind_texture2d.h  bind_texture_cube.cpp  bind_texture_cube.h  bind_vertex_array.cpp  bind_vertex_array.h  (+75 more)
src/buffer/: abstract_buffer.cpp  abstract_buffer.h  abstract_buffer_factory.h  buffer_es2.cpp  buffer_es2.h  buffer_es3.cpp  buffer_es3.h  buffer_factory.cpp  buffer_factory.h  buffer_layout.cpp
src/buffer/es2/: buffer.cpp  buffer.h  buffer_factory.hpp
src/buffer/es3/: buffer.h  buffer_factory.hpp
src/command/: bind_shader.cpp  bind_shader.h  bind_texture2d.cpp  bind_texture2d.h  bind_texture_cube.cpp  set_uniform.h
src/drawable/: batch.cpp  batch.h  model.cpp  model.h  model_factory.cpp  model_factory.h
src/es2/: buffer.cpp  buffer.h  common.h  default_material.cpp  default_material.h  default_shader_sources.hpp  engine.cpp  engine.h  es2.cpp  es2.h  es2_engine.cpp  es2_engine.h  pbr_material.cpp  pbr_material.h  sampler2d.h  shader.cpp  shader.h  shader_variant.cpp  shader_variant.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  texture_cube.cpp  texture_cube.h  vertex_array.cpp  vertex_array.h
src/es3/: common.h  default_material.cpp  default_material.h  default_shader_sources.hpp  engine.cpp  engine.h  es3.cpp  es3.h  pbr_material.cpp  pbr_material.h  shader_variant.h  texture_cube.cpp  texture_cube.h  vertex_array.cpp  vertex_array.h
src/image/: image2d.cpp  image_set.h
src/material/: abstract_material.cpp  abstract_material.h  default_material_es2.cpp  default_material_es2.h  default_material_es3.cpp  default_material_es3.h  default_shader_sources_es3.hpp  material_factory.cpp  material_factory.h
src/material/es2/: default_material.cpp  default_material.h
src/material/es3/: default_material.cpp  default_material.h
src/pipeline/: pipeline.cpp  pipeline.h
src/pipeline/render_pass/: abstract_render_pass.h  depth_prepass.cpp  depth_prepass.h  opaque_pass.cpp  opaque_pass.h  self_sufficient_pass.cpp  self_sufficient_pass.h  transparent_pass.cpp  transparent_pass.h
src/sampler2d/: abstract_sampler2d.h  wrap_mode.h
src/sampler2d/es2/: sampler2d.h
src/sampler2d/es3/: sampler2d.h
src/shader/: abstract_shader.cpp  abstract_shader.h  abstract_shader_variant.cpp  abstract_shader_variant.h  shader_es2.cpp  shader_es2.h  shader_es3.cpp  shader_es3.h  shader_factory.cpp  shader_factory.h  shader_flags.cpp  shader_settings.cpp  shader_settings.h  shader_source.cpp  shader_source.h  shader_variant_es2.cpp  shader_variant_es2.h  shader_variant_es3.cpp  shader_variant_es3.h
src/shader/es2/: shader.cpp  shader.h  shader_variant.cpp
src/shader/es3/: shader.h
src/texture/: texture_type.cpp
src/texture/sampler2d/: sampler2d_es2.cpp  sampler2d_es3.h  sampler2d_factory.cpp  sampler2d_factory.h
src/texture/texture2d/: abstract_texture2d.h  texture2d_es2.cpp  texture2d_es2.h  texture2d_factory.cpp  texture2d_factory.h
src/texture/texture_cube/: abstract_texture_cube.h  texture_cube_es2.cpp  texture_cube_es2.h  texture_cube_es3.cpp  texture_cube_factory.cpp  texture_cube_factory.h
src/util/: log.cpp  thread_pool.h
src/util/vfs/: abstract_file.h  native_file.cpp  native_fs.cpp  native_fs.h  vfs.cpp
src/vertex_array/: abstract_vertex_array.h  vertex_array_es2.cpp  vertex_array_es2.h  vertex_array_es3.cpp  vertex_array_es3.h  vertex_array_factory.cpp  vertex_array_factory.h
(+10 files in other folders)
