add_subdirectory(optick)
add_subdirectory(gli)
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "default value of all ASSIMP_BUILD_XXX_IMPORTER values")
set(ASSIMP_BUILD_COLLADA_IMPORTER ON CACHE BOOL "COLLADA importer")
set(ASSIMP_BUILD_FBX_IMPORTER ON CACHE BOOL "FBX importer")
set(ASSIMP_BUILD_GLTF_IMPORTER ON CACHE BOOL "GLTF importer")
add_subdirectory(assimp)
add_subdirectory(glm)