IF(NOT WIN32)
    set(OPTICK_ENABLED OFF CACHE BOOL "Enable profiling with Optick")
ENDIF(NOT WIN32)
add_subdirectory(optick)
add_subdirectory(gli)
set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "default value of all ASSIMP_BUILD_XXX_IMPORTER values")
set(ASSIMP_BUILD_COLLADA_IMPORTER ON CACHE BOOL "COLLADA importer")
set(ASSIMP_BUILD_FBX_IMPORTER ON CACHE BOOL "FBX importer")
set(ASSIMP_BUILD_GLTF_IMPORTER ON CACHE BOOL "GLTF importer")
set(HUNTER_ENABLED OFF CACHE BOOL "Enable Hunter package manager support")
add_subdirectory(assimp)
add_subdirectory(glm)
add_subdirectory(stb)
add_subdirectory(spdlog)